grammarcodeParser.py
# Generated from grammarcode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarcodeParser ( Parser ):

    grammarFileName = "grammarcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Inicio'", "'Terminar'", "'Escribe'", 
                     "'Lee'", "'en'", "'SI'", "'SINO'", "'Hacer'", "'Fin'", 
                     "'Repetir'", "'veces'", "'Mientras'", "'entero'", "'decimal'", 
                     "'palabra'", "'esVerdad'", "'Arreglo'", "'regresar'", 
                     "'Receta'", "'mas'", "'menos'", "'por'", "'entre'", 
                     "'potencia'", "'raiz'", "'sobrante'", "'Agregar'", 
                     "'Agregar-en'", "'Elimina'", "'Elimina-en'", "'Voltear'", 
                     "'Ultimo'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'si'", "'no'", "<INVALID>", "'('", "')'", 
                     "'->'", "','", "'.'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INICIO", "TERMINAR", "ESCRIBE", "LEE", 
                      "EN", "SI", "SINO", "HACER", "FIN", "REPETIR", "VECES", 
                      "MIENTRAS", "ENTERO", "DECIMAL", "PALABRA", "ESVERDAD", 
                      "ARREGLO", "REGRESAR", "RECIPE", "MAS", "MENOS", "POR", 
                      "ENTRE", "POTENCIA", "RAIZ", "RESIDUO", "AGREGA", 
                      "AGREGAEN", "ELIMINA", "ELIMINAEN", "VOLTEAR", "ULTIMO", 
                      "IDENTIFIER", "NUMBER", "DECIMAL_NUMBER", "STRING", 
                      "BOOLEAN_TRUE", "BOOLEAN_FALSE", "WS", "LPAREN", "RPAREN", 
                      "ARROW", "COMMA", "POINT", "LESS", "GREATER", "LEQ", 
                      "GEQ", "EQ", "NEQ", "LBRACKET", "RBRACKET" ]

    RULE_program = 0
    RULE_inicioBloque = 1
    RULE_statement = 2
    RULE_asignacion = 3
    RULE_igualacion = 4
    RULE_tipo = 5
    RULE_expression = 6
    RULE_valor = 7
    RULE_declaraArr = 8
    RULE_posiblesOper = 9
    RULE_operationArr = 10
    RULE_llamarMetodo = 11
    RULE_ciclo = 12
    RULE_repetirCiclo = 13
    RULE_mientrasCiclo = 14
    RULE_condicional = 15
    RULE_condicionalelse = 16
    RULE_condition = 17
    RULE_definicionFuncion = 18
    RULE_returnStatement = 19
    RULE_parameters = 20
    RULE_llamadaFuncion = 21
    RULE_arguments = 22
    RULE_printStatement = 23
    RULE_entrada = 24

    ruleNames =  [ "program", "inicioBloque", "statement", "asignacion", 
                   "igualacion", "tipo", "expression", "valor", "declaraArr", 
                   "posiblesOper", "operationArr", "llamarMetodo", "ciclo", 
                   "repetirCiclo", "mientrasCiclo", "condicional", "condicionalelse", 
                   "condition", "definicionFuncion", "returnStatement", 
                   "parameters", "llamadaFuncion", "arguments", "printStatement", 
                   "entrada" ]

    EOF = Token.EOF
    INICIO=1
    TERMINAR=2
    ESCRIBE=3
    LEE=4
    EN=5
    SI=6
    SINO=7
    HACER=8
    FIN=9
    REPETIR=10
    VECES=11
    MIENTRAS=12
    ENTERO=13
    DECIMAL=14
    PALABRA=15
    ESVERDAD=16
    ARREGLO=17
    REGRESAR=18
    RECIPE=19
    MAS=20
    MENOS=21
    POR=22
    ENTRE=23
    POTENCIA=24
    RAIZ=25
    RESIDUO=26
    AGREGA=27
    AGREGAEN=28
    ELIMINA=29
    ELIMINAEN=30
    VOLTEAR=31
    ULTIMO=32
    IDENTIFIER=33
    NUMBER=34
    DECIMAL_NUMBER=35
    STRING=36
    BOOLEAN_TRUE=37
    BOOLEAN_FALSE=38
    WS=39
    LPAREN=40
    RPAREN=41
    ARROW=42
    COMMA=43
    POINT=44
    LESS=45
    GREATER=46
    LEQ=47
    GEQ=48
    EQ=49
    NEQ=50
    LBRACKET=51
    RBRACKET=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inicioBloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.InicioBloqueContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.InicioBloqueContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = grammarcodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8590718042) != 0):
                self.state = 52
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 50
                    self.inicioBloque()
                    pass
                elif token in [3, 4, 6, 10, 12, 13, 14, 15, 16, 17, 19, 33]:
                    self.state = 51
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InicioBloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO(self):
            return self.getToken(grammarcodeParser.INICIO, 0)

        def LPAREN(self):
            return self.getToken(grammarcodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(grammarcodeParser.RPAREN, 0)

        def TERMINAR(self):
            return self.getToken(grammarcodeParser.TERMINAR, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_inicioBloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInicioBloque" ):
                listener.enterInicioBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInicioBloque" ):
                listener.exitInicioBloque(self)




    def inicioBloque(self):

        localctx = grammarcodeParser.InicioBloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inicioBloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(grammarcodeParser.INICIO)
            self.state = 58
            self.match(grammarcodeParser.LPAREN)
            self.state = 59
            self.match(grammarcodeParser.RPAREN)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.statement()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8590718040) != 0)):
                    break

            self.state = 65
            self.match(grammarcodeParser.TERMINAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(grammarcodeParser.AsignacionContext,0)


        def igualacion(self):
            return self.getTypedRuleContext(grammarcodeParser.IgualacionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(grammarcodeParser.CicloContext,0)


        def condicional(self):
            return self.getTypedRuleContext(grammarcodeParser.CondicionalContext,0)


        def definicionFuncion(self):
            return self.getTypedRuleContext(grammarcodeParser.DefinicionFuncionContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(grammarcodeParser.LlamadaFuncionContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(grammarcodeParser.PrintStatementContext,0)


        def entrada(self):
            return self.getTypedRuleContext(grammarcodeParser.EntradaContext,0)


        def declaraArr(self):
            return self.getTypedRuleContext(grammarcodeParser.DeclaraArrContext,0)


        def operationArr(self):
            return self.getTypedRuleContext(grammarcodeParser.OperationArrContext,0)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = grammarcodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.igualacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.ciclo()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.condicional()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.definicionFuncion()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.llamadaFuncion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.printStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 74
                self.entrada()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.declaraArr()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 76
                self.operationArr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(grammarcodeParser.TipoContext,0)


        def IDENTIFIER(self):
            return self.getToken(grammarcodeParser.IDENTIFIER, 0)

        def ARROW(self):
            return self.getToken(grammarcodeParser.ARROW, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarcodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = grammarcodeParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.tipo()
            self.state = 80
            self.match(grammarcodeParser.IDENTIFIER)
            self.state = 81
            self.match(grammarcodeParser.ARROW)
            self.state = 82
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IgualacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(grammarcodeParser.IDENTIFIER, 0)

        def ARROW(self):
            return self.getToken(grammarcodeParser.ARROW, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarcodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_igualacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgualacion" ):
                listener.enterIgualacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgualacion" ):
                listener.exitIgualacion(self)




    def igualacion(self):

        localctx = grammarcodeParser.IgualacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_igualacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(grammarcodeParser.IDENTIFIER)
            self.state = 85
            self.match(grammarcodeParser.ARROW)
            self.state = 86
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(grammarcodeParser.ENTERO, 0)

        def DECIMAL(self):
            return self.getToken(grammarcodeParser.DECIMAL, 0)

        def PALABRA(self):
            return self.getToken(grammarcodeParser.PALABRA, 0)

        def ESVERDAD(self):
            return self.getToken(grammarcodeParser.ESVERDAD, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = grammarcodeParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(grammarcodeParser.IDENTIFIER, 0)

        def valor(self):
            return self.getTypedRuleContext(grammarcodeParser.ValorContext,0)


        def llamarMetodo(self):
            return self.getTypedRuleContext(grammarcodeParser.LlamarMetodoContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(grammarcodeParser.LlamadaFuncionContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.ExpressionContext,i)


        def MAS(self):
            return self.getToken(grammarcodeParser.MAS, 0)

        def MENOS(self):
            return self.getToken(grammarcodeParser.MENOS, 0)

        def POR(self):
            return self.getToken(grammarcodeParser.POR, 0)

        def ENTRE(self):
            return self.getToken(grammarcodeParser.ENTRE, 0)

        def POTENCIA(self):
            return self.getToken(grammarcodeParser.POTENCIA, 0)

        def RESIDUO(self):
            return self.getToken(grammarcodeParser.RESIDUO, 0)

        def RAIZ(self):
            return self.getToken(grammarcodeParser.RAIZ, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammarcodeParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 91
                self.match(grammarcodeParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 92
                self.valor()
                pass

            elif la_ == 3:
                self.state = 93
                self.llamarMetodo()
                pass

            elif la_ == 4:
                self.state = 94
                self.llamadaFuncion()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 118
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 97
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 98
                        self.match(grammarcodeParser.MAS)
                        self.state = 99
                        self.expression(12)
                        pass

                    elif la_ == 2:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 100
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 101
                        self.match(grammarcodeParser.MENOS)
                        self.state = 102
                        self.expression(11)
                        pass

                    elif la_ == 3:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 103
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 104
                        self.match(grammarcodeParser.POR)
                        self.state = 105
                        self.expression(10)
                        pass

                    elif la_ == 4:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 106
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 107
                        self.match(grammarcodeParser.ENTRE)
                        self.state = 108
                        self.expression(9)
                        pass

                    elif la_ == 5:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 109
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 110
                        self.match(grammarcodeParser.POTENCIA)
                        self.state = 111
                        self.expression(8)
                        pass

                    elif la_ == 6:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 112
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 113
                        self.match(grammarcodeParser.RESIDUO)
                        self.state = 114
                        self.expression(7)
                        pass

                    elif la_ == 7:
                        localctx = grammarcodeParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 115
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 116
                        self.match(grammarcodeParser.RAIZ)
                        self.state = 117
                        self.expression(6)
                        pass

             
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL_NUMBER(self):
            return self.getToken(grammarcodeParser.DECIMAL_NUMBER, 0)

        def NUMBER(self):
            return self.getToken(grammarcodeParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(grammarcodeParser.STRING, 0)

        def BOOLEAN_TRUE(self):
            return self.getToken(grammarcodeParser.BOOLEAN_TRUE, 0)

        def BOOLEAN_FALSE(self):
            return self.getToken(grammarcodeParser.BOOLEAN_FALSE, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)




    def valor(self):

        localctx = grammarcodeParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 532575944704) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaraArrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARREGLO(self):
            return self.getToken(grammarcodeParser.ARREGLO, 0)

        def tipo(self):
            return self.getTypedRuleContext(grammarcodeParser.TipoContext,0)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(grammarcodeParser.IDENTIFIER)
            else:
                return self.getToken(grammarcodeParser.IDENTIFIER, i)

        def ARROW(self):
            return self.getToken(grammarcodeParser.ARROW, 0)

        def LBRACKET(self):
            return self.getToken(grammarcodeParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(grammarcodeParser.RBRACKET, 0)

        def arguments(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarcodeParser.ArgumentsContext)
            else:
                return self.getTypedRuleContext(grammarcodeParser.ArgumentsContext,i)


        def getRuleIndex(self):
            return grammarcodeParser.RULE_declaraArr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraArr" ):
                listener.enterDeclaraArr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraArr" ):
                listener.exitDeclaraArr(self)




    def declaraArr(self):

        localctx = grammarcodeParser.DeclaraArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declaraArr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(grammarcodeParser.ARREGLO)
            self.state = 126
            self.tipo()
            self.state = 127
            self.match(grammarcodeParser.IDENTIFIER)
            self.state = 128
            self.match(grammarcodeParser.ARROW)
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.state = 129
                self.match(grammarcodeParser.IDENTIFIER)
                pass
            elif token in [51]:
                self.state = 130
                self.match(grammarcodeParser.LBRACKET)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 541165879296) != 0):
                    self.state = 131
                    self.arguments()
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 137
                self.match(grammarcodeParser.RBRACKET)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PosiblesOperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AGREGA(self):
            return self.getToken(grammarcodeParser.AGREGA, 0)

        def ELIMINA(self):
            return self.getToken(grammarcodeParser.ELIMINA, 0)

        def ELIMINAEN(self):
            return self.getToken(grammarcodeParser.ELIMINAEN, 0)

        def AGREGAEN(self):
            return self.getToken(grammarcodeParser.AGREGAEN, 0)

        def VOLTEAR(self):
            return self.getToken(grammarcodeParser.VOLTEAR, 0)

        def getRuleIndex(self):
            return grammarcodeParser.RULE_posiblesOper

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosiblesOper" ):
                listener.enterPosiblesOper(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosiblesOper" ):
                listener.exitPosiblesOper(self)




    def posiblesOper(self):

        localctx = grammarcodeParser.PosiblesOperContext(self, self._ctx, self.state)
